--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_FIREBASE_API_KEY=AIzaSyDtRQYPv3tQGemKPYuyq60yYXCaLVk40Lw
+REACT_APP_FIREBASE_AUTH_DOMAIN=auth-development-33e3f.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://auth-development-33e3f-default-rtdb.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID=auth-development-33e3f
+REACT_APP_FIREBASE_STORAGE_BUCKET=auth-development-33e3f.appspot.com
+REACT_APP_FIREBASE_MESSAGE_SENDER_ID=793396975435
+REACT_APP_FIREBASE_APP_ID=1:793396975435:web:62c81a25c621e02eb2bace
